# libnostd

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: check_scripts.yml  main.yml
examples/: CMakeLists.txt  example-01.cpp
include/: core.hpp  math.hpp
include/libnostd/: libnostd.hpp
include/libnostd/cs/: core.hpp
include/libnostd/math/: core.hpp  statistics.hpp
scripts/: build.sh
src/: libnostd.cpp
src/core/: common.cpp
src/cs/: core.cpp
src/math/: core.cpp  statistics.cpp
tests/: CMakeLists.txt  test_cs.cpp  test_math.cpp
