cmake_minimum_required(VERSION 3.14)

project(
    libnostd
    VERSION 0.0.1
    DESCRIPTION "A Powerful C++ Library fot Hight-Performance Computing"
    LANGUAGES CXX
)

include_directories(include)

set(CMAKE_CXX_STANDARD 20)

## add_subdirectory(example)

## add_subdirectory(tests)